--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,13 @@ spring.datasource.username=ziad
 spring.datasource.password=ziad
 
 # -- JPA -- #
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # -- SERVER -- #
+server.port=9090
 server.error.include-message=always
 server.error.include-binding-errors=always
 
@@ -19,3 +20,5 @@ server.error.include-binding-errors=always
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+# -- STATIC FOLDER LOCATIONS -- #
+spring.resources.static-locations=classpath:/static/
